# DraxonGen-Discord

./: .gitignore  CHANGELOG.md  README.md  checkmails.py  config.json  elctron.py  license.key  main.py  main.spec  oldorignal.py  proxies.txt  proxy_usage.json  pyproject.toml  requirements.txt  schema.sql  setup.py  telemetry-id
.github/workflows/: release.yml
muskdta/: __init__.py  cli.py
proxy_extension/: background.js  manifest.json
